--- a/style.css
+++ b/style.css
@@ -42,3 +42,34 @@ body{
     font-size: 18px;
     color: rgb(220, 220, 220);
 }
+
+#panel_header{
+    display: block;
+    position: absolute;
+    width: 296px;
+    text-align: center;
+    border: 0px solid black;
+    margin: 2px;
+    font-family: sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    color: brown;
+}
+#panel_section{
+    display: block;
+    margin-top: 50px;
+}
+
+#com{
+    display: block;
+    position: absolute;
+    border: 0px solid black;
+    width: 294px;
+    height: 30px;
+    margin: 50px 2px 0 2px;
+    text-align: center;
+    font-family: Verdana;
+    font-size: 14px;
+    font-weight: bold;
+    color: rgb(77, 44, 44);
+}
